--- a/actionpack/lib/action_dispatch/middleware/templates/rescues/blocked_request.html.erb
+++ b/actionpack/lib/action_dispatch/middleware/templates/rescues/blocked_request.html.erb
@@ -1,10 +1,13 @@
 <header>
-  <h1>Blocked request: <%= @request.method %> <%= @request.host %></h1>
+  <h1>
+    Blocked request: <%= @request.method %> <%= @request.original_fullpath %>
+  </h1>
 </header>
 <div id="container">
   <h2>
-    Request <%= @request.method %> <%= @request.host %> with the following
-    HTTP headers violates the site's Resource Isolation Policy:
+    Request <%= @request.method %> <%= @request.original_fullpath %>
+    with the following HTTP headers
+    violates the site's Resource Isolation Policy:
   </h2>
   <pre>
     <% @request.headers.each do |header_name, value| %>
